# classification-logs-deploy

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  classify.py  create_arch_diagram.py  processor_bert.py  processor_llm.py  processor_regex.py  pyproject.toml  render.yaml  requirement.txt  requirements.txt  server.py
Training/dataset/: log_message_embeddings_all-MiniLM-L6-v2.npy
Training/model/: log_classifier.joblib
resources/: test.csv
