[project]
name = "classification-logs"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "groq>=1.5.0",
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.0",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
]
